examples/test/testpolicy9360.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9360
  namespace: namespace213
spec:
  podSelector:
    matchLabels:
      key7: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value7
          key0: value1
      podSelector:
        matchLabels:
          key47: value1
          key18: value16
          key31: value42
